test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/ablation_o3_r50/mutants/14/result.txt
./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/ablation_o3_r50/mutants/14/Solution.java:23: error: unreachable statement
            while (false) {
                          ^
1 error
